add confirmation logic

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,19 @@
 version: '3.9'
 services:
 
-  # postgres:
-  #   container_name: postgres_pad
-  #   image: postgres:14-alpine
-  #   ports:
-  #     - 5432:5432
-  #   volumes:
-  #     - postgres-db:/data/postgres
-  #   environment:
-  #     - POSTGRES_PASSWORD=password
-  #     - POSTGRES_USER=user
-  #     - POSTGRES_DB=test_db  
+  postgres:
+    container_name: postgres_pad
+    build:
+      context: ./accident-reporting-service
+      dockerfile: Dockerfile-postgresdb
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres-db:/data/postgres
+    environment:
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_USER=user
+      - POSTGRES_DB=test_db  
 
   # cache:
   #   image: redis:6.2-alpine 
@@ -34,8 +36,8 @@ services:
 
     
 volumes:
-  # postgres-db:
-  #   driver: local 
+  postgres-db:
+    driver: local 
   # cache:
   #   driver: local 
   mongodb:
