--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,16 +15,16 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_DB=test_db  
 
-  # cache:
-  #   image: redis:6.2-alpine 
-  #   container_name: redis_pad
-  #   restart: always
-  #   ports:
-  #     - '6379:6379'
-  #   volumes: 
-  #     - cache:/data/redis
-  #   environment:
-  #     - REDIS_PASSWORD=password 
+  cache:
+    image: redis:6.2-alpine 
+    container_name: redis_pad
+    restart: always
+    ports:
+      - '6379:6379'
+    volumes: 
+      - cache:/data/redis
+    environment:
+      - REDIS_PASSWORD=password 
 
   mongodb:
     image: mongo:6-jammy
@@ -38,7 +38,7 @@ services:
 volumes:
   postgres-db:
     driver: local 
-  # cache:
-  #   driver: local 
+  cache:
+    driver: local 
   mongodb:
     driver: local
