--- a/police-reporting-service/Dockerfile
+++ b/police-reporting-service/Dockerfile
@@ -1,13 +1,15 @@
 FROM golang:latest
 
-RUN mkdir /app 
+RUN mkdir /app
 
-ARG port
+ENV PORT=$port
 
-COPY . /app  
-WORKDIR /app 
+COPY . /app
+WORKDIR /app
 
-RUN export GO111MODULE=on  
-RUN go mod tidy 
-EXPOSE ${port} 
-CMD go run ./cmd
+RUN export GO111MODULE=on
+RUN go mod tidy
+
+EXPOSE $port
+CMD go run ./cmd 
+
