--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,143 +1,143 @@
 version: '3.9'
 services:
 
-  service_discovery:
-      container_name: service_discovery_pad
-      image: nicug/service_discovery:latest
-      ports:
-        - 8000:8000
+  # service_discovery:
+  #     container_name: service_discovery_pad
+  #     image: nicug/service_discovery:latest
+  #     ports:
+  #       - 8000:8000
 
-  gateway:
-      container_name: gateway_pad
-      image: nicug/gateway:latest
-      ports:
-        - 8080:8080
-      environment:
-        - SERVICE_DISCOVERY_PORT=8000
-        - SERVICE_DISCOVERY_HOST=service_discovery_pad
-        - REDIS_HOST=redis_pad
-        - REDIS_PORT=6379
-      depends_on:
-        - service_discovery 
-        - pol1
-        - pol2
-        - pol3
-        - acc1
-        - cache
+  # gateway:
+  #     container_name: gateway_pad
+  #     image: nicug/gateway:latest
+  #     ports:
+  #       - 8080:8080
+  #     environment:
+  #       - SERVICE_DISCOVERY_PORT=8000
+  #       - SERVICE_DISCOVERY_HOST=service_discovery_pad
+  #       - REDIS_HOST=redis_pad
+  #       - REDIS_PORT=6379
+  #     depends_on:
+  #       - service_discovery 
+  #       - pol1
+  #       - pol2
+  #       - pol3
+  #       - acc1
+  #       - cache
   
-  pol1:
-    container_name: police_repo1
-    image: nicug/police_reporting_service:latest
-    ports:
-      - "6666:6666" 
-    environment:
-     - PORT=6666
-     - DB_NAME=test_db
-     - SERVICE_PORT=6666
-     - MONGODB_HOST=mongo_pad
-     - MONGODB_PORT=27017
-     - LOCALNAME=police_repo1
-     - SERVICE_DISCOVERY_PORT=8000
-     - SERVICE_DISCOVERY_HOST=service_discovery_pad
-    depends_on:
-      - mongodb
-      - service_discovery 
+  # pol1:
+  #   container_name: police_repo1
+  #   image: nicug/police_reporting_service:latest
+  #   ports:
+  #     - "6666:6666" 
+  #   environment:
+  #    - PORT=6666
+  #    - DB_NAME=test_db
+  #    - SERVICE_PORT=6666
+  #    - MONGODB_HOST=mongo_pad
+  #    - MONGODB_PORT=27017
+  #    - LOCALNAME=police_repo1
+  #    - SERVICE_DISCOVERY_PORT=8000
+  #    - SERVICE_DISCOVERY_HOST=service_discovery_pad
+  #   depends_on:
+  #     - mongodb
+  #     - service_discovery 
 
-  pol2:
-    container_name: police_repo2
-    image: nicug/police_reporting_service:latest
-    ports:
-      - "6667:6667" 
-    environment:
-     - PORT=6667
-     - DB_NAME=test_db
-     - SERVICE_PORT=6667
-     - MONGODB_HOST=mongo_pad
-     - MONGODB_PORT=27017
-     - LOCALNAME=police_repo2
-     - SERVICE_DISCOVERY_PORT=8000
-     - SERVICE_DISCOVERY_HOST=service_discovery_pad
-    depends_on:
-      - mongodb
-      - service_discovery
+  # pol2:
+  #   container_name: police_repo2
+  #   image: nicug/police_reporting_service:latest
+  #   ports:
+  #     - "6667:6667" 
+  #   environment:
+  #    - PORT=6667
+  #    - DB_NAME=test_db
+  #    - SERVICE_PORT=6667
+  #    - MONGODB_HOST=mongo_pad
+  #    - MONGODB_PORT=27017
+  #    - LOCALNAME=police_repo2
+  #    - SERVICE_DISCOVERY_PORT=8000
+  #    - SERVICE_DISCOVERY_HOST=service_discovery_pad
+  #   depends_on:
+  #     - mongodb
+  #     - service_discovery
   
-  pol3:
-    container_name: police_repo3
-    image: nicug/police_reporting_service:latest
-    ports:
-      - "6668:6668" 
-    environment:
-     - PORT=6668
-     - DB_NAME=test_db
-     - SERVICE_PORT=6668
-     - MONGODB_HOST=mongo_pad
-     - MONGODB_PORT=27017
-     - LOCALNAME=police_repo3
-     - SERVICE_DISCOVERY_PORT=8000
-     - SERVICE_DISCOVERY_HOST=service_discovery_pad
-    depends_on:
-      - mongodb
-      - service_discovery
+  # pol3:
+  #   container_name: police_repo3
+  #   image: nicug/police_reporting_service:latest
+  #   ports:
+  #     - "6668:6668" 
+  #   environment:
+  #    - PORT=6668
+  #    - DB_NAME=test_db
+  #    - SERVICE_PORT=6668
+  #    - MONGODB_HOST=mongo_pad
+  #    - MONGODB_PORT=27017
+  #    - LOCALNAME=police_repo3
+  #    - SERVICE_DISCOVERY_PORT=8000
+  #    - SERVICE_DISCOVERY_HOST=service_discovery_pad
+  #   depends_on:
+  #     - mongodb
+  #     - service_discovery
 
-  acc1:
-    container_name: acc_repo1
-    image: nicug/accident_reporting_service:latest
-    ports:
-      - "6676:6676" 
-    environment:
-    - PORT=6676
-    - SERVICE_PORT=6676
-    - LOCALNAME=acc_repo1
-    - SERVICE_DISCOVERY_PORT=8000
-    - SERVICE_DISCOVERY_HOST=service_discovery_pad
-    - POSTGRES_HOST=postgres_pad
-    - USER_DB=user
-    - POSTGRES_PW=password
-    - POSTGRES_DB_NAME=test_db
-    - POSTGRES_PORT=5432
-    depends_on:
-      - postgres
-      - service_discovery  
+  # acc1:
+  #   container_name: acc_repo1
+  #   image: nicug/accident_reporting_service:latest
+  #   ports:
+  #     - "6676:6676" 
+  #   environment:
+  #   - PORT=6676
+  #   - SERVICE_PORT=6676
+  #   - LOCALNAME=acc_repo1
+  #   - SERVICE_DISCOVERY_PORT=8000
+  #   - SERVICE_DISCOVERY_HOST=service_discovery_pad
+  #   - POSTGRES_HOST=postgres_pad
+  #   - USER_DB=user
+  #   - POSTGRES_PW=password
+  #   - POSTGRES_DB_NAME=test_db
+  #   - POSTGRES_PORT=5432
+  #   depends_on:
+  #     - postgres
+  #     - service_discovery  
 
-  acc2:
-    container_name: acc_repo2
-    image: nicug/accident_reporting_service:latest
-    ports:
-      - "6677:6677" 
-    environment:
-    - PORT=6677
-    - SERVICE_PORT=6677
-    - LOCALNAME=acc_repo2
-    - SERVICE_DISCOVERY_PORT=8000
-    - SERVICE_DISCOVERY_HOST=service_discovery_pad
-    - POSTGRES_HOST=postgres_pad
-    - USER_DB=user
-    - POSTGRES_PW=password
-    - POSTGRES_DB_NAME=test_db
-    - POSTGRES_PORT=5432
-    depends_on:
-      - postgres
-      - service_discovery  
+  # acc2:
+  #   container_name: acc_repo2
+  #   image: nicug/accident_reporting_service:latest
+  #   ports:
+  #     - "6677:6677" 
+  #   environment:
+  #   - PORT=6677
+  #   - SERVICE_PORT=6677
+  #   - LOCALNAME=acc_repo2
+  #   - SERVICE_DISCOVERY_PORT=8000
+  #   - SERVICE_DISCOVERY_HOST=service_discovery_pad
+  #   - POSTGRES_HOST=postgres_pad
+  #   - USER_DB=user
+  #   - POSTGRES_PW=password
+  #   - POSTGRES_DB_NAME=test_db
+  #   - POSTGRES_PORT=5432
+  #   depends_on:
+  #     - postgres
+  #     - service_discovery  
 
-  acc3:
-    container_name: acc_repo3
-    image: nicug/accident_reporting_service:latest
-    ports:
-      - "6678:6678" 
-    environment:
-    - PORT=6678
-    - SERVICE_PORT=6678
-    - LOCALNAME=acc_repo3
-    - SERVICE_DISCOVERY_PORT=8000
-    - SERVICE_DISCOVERY_HOST=service_discovery_pad
-    - POSTGRES_HOST=postgres_pad
-    - USER_DB=user
-    - POSTGRES_PW=password
-    - POSTGRES_DB_NAME=test_db
-    - POSTGRES_PORT=5432
-    depends_on:
-      - postgres
-      - service_discovery 
+  # acc3:
+  #   container_name: acc_repo3
+  #   image: nicug/accident_reporting_service:latest
+  #   ports:
+  #     - "6678:6678" 
+  #   environment:
+  #   - PORT=6678
+  #   - SERVICE_PORT=6678
+  #   - LOCALNAME=acc_repo3
+  #   - SERVICE_DISCOVERY_PORT=8000
+  #   - SERVICE_DISCOVERY_HOST=service_discovery_pad
+  #   - POSTGRES_HOST=postgres_pad
+  #   - USER_DB=user
+  #   - POSTGRES_PW=password
+  #   - POSTGRES_DB_NAME=test_db
+  #   - POSTGRES_PORT=5432
+  #   depends_on:
+  #     - postgres
+  #     - service_discovery 
 
   postgres:
     container_name: postgres_pad
