fix redis cluster, add prometheus and grapahan per service, adjust docker files

--- a/accident-reporting-service/Dockerfile
+++ b/accident-reporting-service/Dockerfile
@@ -3,6 +3,8 @@ FROM golang:latest
 RUN mkdir /app
 
 ENV PORT=$port
+ENV PORT2=$port2
+
 
 COPY . /app
 WORKDIR /app
@@ -10,5 +12,5 @@ WORKDIR /app
 RUN export GO111MODULE=on
 RUN go mod tidy
 
-EXPOSE $port
+EXPOSE $port $port2
 CMD go run ./cmd
