--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
         - 8000:8000
 
   gateway:
-      container_name: gateway_pad
+      container_name: gateway
       #image: nicug/gateway:latest
       build:
         context: ./gateway
@@ -19,6 +19,7 @@ services:
       ports:
         - 8080:8080
       environment:
+        - PORT=8080
         - SERVICE_DISCOVERY_PORT=8000
         - SERVICE_DISCOVERY_HOST=service_discovery_pad
         - REDIS_HOST=redis-node-2
@@ -42,8 +43,8 @@ services:
     environment:
      - PORT=6666
      - PORT2=1221
-     - DB_NAME=test_db
      - HTTP_PORT=1221
+     - DB_NAME=test_db
      - SERVICE_PORT=6666
      - MONGODB_HOST=mongo_pad
      - MONGODB_PORT=27017
@@ -54,41 +55,53 @@ services:
       - mongodb
       - service_discovery 
 
-  # pol2:
-  #   container_name: police_repo2
-  #   image: nicug/police_reporting_service:latest
-  #   ports:
-  #     - "6667:6667" 
-  #   environment:
-  #    - PORT=6667
-  #    - DB_NAME=test_db
-  #    - SERVICE_PORT=6667
-  #    - MONGODB_HOST=mongo_pad
-  #    - MONGODB_PORT=27017
-  #    - LOCALNAME=police_repo2
-  #    - SERVICE_DISCOVERY_PORT=8000
-  #    - SERVICE_DISCOVERY_HOST=service_discovery_pad
-  #   depends_on:
-  #     - mongodb
-  #     - service_discovery
+  pol2:
+    container_name: police_repo2
+    build:
+        context: ./police-reporting-service
+        dockerfile: Dockerfile
+    #image: nicug/police_reporting_service:latest
+    ports:
+      - "6667:6667" 
+      - "1222:1222"
+    environment:
+     - PORT=6667
+     - PORT2=1222
+     - HTTP_PORT=1222
+     - DB_NAME=test_db
+     - SERVICE_PORT=6667
+     - MONGODB_HOST=mongo_pad
+     - MONGODB_PORT=27017
+     - LOCALNAME=police_repo2
+     - SERVICE_DISCOVERY_PORT=8000
+     - SERVICE_DISCOVERY_HOST=service_discovery_pad
+    depends_on:
+      - mongodb
+      - service_discovery
   
-  # pol3:
-  #   container_name: police_repo3
-  #   image: nicug/police_reporting_service:latest
-  #   ports:
-  #     - "6668:6668" 
-  #   environment:
-  #    - PORT=6668
-  #    - DB_NAME=test_db
-  #    - SERVICE_PORT=6668
-  #    - MONGODB_HOST=mongo_pad
-  #    - MONGODB_PORT=27017
-  #    - LOCALNAME=police_repo3
-  #    - SERVICE_DISCOVERY_PORT=8000
-  #    - SERVICE_DISCOVERY_HOST=service_discovery_pad
-  #   depends_on:
-  #     - mongodb
-  #     - service_discovery
+  pol3:
+    container_name: police_repo3
+    build:
+        context: ./police-reporting-service
+        dockerfile: Dockerfile
+    #image: nicug/police_reporting_service:latest
+    ports:
+      - "6668:6668"
+      - "1223:1223"
+    environment:
+     - PORT=6668
+     - PORT2=1223
+     - HTTP_PORT=1223
+     - DB_NAME=test_db
+     - SERVICE_PORT=6668
+     - MONGODB_HOST=mongo_pad
+     - MONGODB_PORT=27017
+     - LOCALNAME=police_repo3
+     - SERVICE_DISCOVERY_PORT=8000
+     - SERVICE_DISCOVERY_HOST=service_discovery_pad
+    depends_on:
+      - mongodb
+      - service_discovery
 
   acc1:
     container_name: acc_repo1
@@ -116,45 +129,58 @@ services:
       - postgres
       - service_discovery  
 
-  # acc2:
-  #   container_name: acc_repo2
-  #   image: nicug/accident_reporting_service:latest
-  #   ports:
-  #     - "6677:6677" 
-  #   environment:
-  #   - PORT=6677
-  #   - SERVICE_PORT=6677
-  #   - LOCALNAME=acc_repo2
-  #   - SERVICE_DISCOVERY_PORT=8000
-  #   - SERVICE_DISCOVERY_HOST=service_discovery_pad
-  #   - POSTGRES_HOST=postgres_pad
-  #   - USER_DB=user
-  #   - POSTGRES_PW=password
-  #   - POSTGRES_DB_NAME=test_db
-  #   - POSTGRES_PORT=5432
-  #   depends_on:
-  #     - postgres
-  #     - service_discovery  
+  acc2:
+    container_name: acc_repo2
+    #image: nicug/accident_reporting_service:latest
+    build:
+        context: ./accident-reporting-service
+        dockerfile: Dockerfile
+    ports:
+      - "6677:6677" 
+      - "2113:2113"
 
-  # acc3:
-  #   container_name: acc_repo3
-  #   image: nicug/accident_reporting_service:latest
-  #   ports:
-  #     - "6678:6678" 
-  #   environment:
-  #   - PORT=6678
-  #   - SERVICE_PORT=6678
-  #   - LOCALNAME=acc_repo3
-  #   - SERVICE_DISCOVERY_PORT=8000
-  #   - SERVICE_DISCOVERY_HOST=service_discovery_pad
-  #   - POSTGRES_HOST=postgres_pad
-  #   - USER_DB=user
-  #   - POSTGRES_PW=password
-  #   - POSTGRES_DB_NAME=test_db
-  #   - POSTGRES_PORT=5432
-  #   depends_on:
-  #     - postgres
-  #     - service_discovery 
+    environment:
+    - PORT=6677
+    - PORT2=2113
+    - HTTP_PORT=2113
+    - SERVICE_PORT=6677
+    - LOCALNAME=acc_repo2
+    - SERVICE_DISCOVERY_PORT=8000
+    - SERVICE_DISCOVERY_HOST=service_discovery_pad
+    - POSTGRES_HOST=postgres_pad
+    - USER_DB=user
+    - POSTGRES_PW=password
+    - POSTGRES_DB_NAME=test_db
+    - POSTGRES_PORT=5432
+    depends_on:
+      - postgres
+      - service_discovery  
+
+  acc3:
+    container_name: acc_repo3
+    #image: nicug/accident_reporting_service:latest
+    build:
+       context: ./accident-reporting-service
+       dockerfile: Dockerfile
+    ports:
+      - "6678:6678"
+      - "2114:2114"
+    environment:
+    - PORT=6678
+    - PORT2=2114
+    - HTTP_PORT=2114 
+    - SERVICE_PORT=6678
+    - LOCALNAME=acc_repo3
+    - SERVICE_DISCOVERY_PORT=8000
+    - SERVICE_DISCOVERY_HOST=service_discovery_pad
+    - POSTGRES_HOST=postgres_pad
+    - USER_DB=user
+    - POSTGRES_PW=password
+    - POSTGRES_DB_NAME=test_db
+    - POSTGRES_PORT=5432
+    depends_on:
+      - postgres
+      - service_discovery 
 
   prometheus:
     container_name: prometheus_container
@@ -172,9 +198,11 @@ services:
 
   grafana:
     container_name: grafana_container
-    image: grafana/grafana
+    image: grafana/grafana 
     ports:
       - '3000:3000'
+    volumes:
+     - ./graphana/datasource.yml:/etc/grafana/provisioning/datasouce.yml
 
   postgres:
     container_name: postgres_pad
