--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,4 +6,4 @@ scrape_configs:
   - job_name: 'prometheus'
     metrics_path: '/metrics'
     static_configs:
-      - targets: ['localhost:9090', 'service_discovery_pad:8000', 'gateway_pad:8080', 'police_repo1:1221', 'acc_repo1:2112']
+      - targets: ['localhost:9090',  'gateway:8080', 'police_repo1:1221','police_repo2:1222', 'police_repo3:1223', 'acc_repo1:2112', 'acc_repo2:2113','acc_repo3:2114']
